testsuite/tests/typecheck/should_fail/tcfail038.stderr

tcfail038.hs:7:11: error:
    Conflicting definitions for ‘==’
    Bound at: tcfail038.hs:7:11-12
              tcfail038.hs:9:11-12

tcfail038.hs:8:11: error:
    ‘/=’ is not a (visible) method of class ‘Eq’

tcfail038.hs:8:11: error:
    Conflicting definitions for ‘/=’
    Bound at: tcfail038.hs:8:11-12
              tcfail038.hs:10:11-12

tcfail038.hs:10:11: error:
    ‘/=’ is not a (visible) method of class ‘Eq’
